Fix layout issues and add syntax highlighting

--- a/static/global.css
+++ b/static/global.css
@@ -7,8 +7,13 @@ body {
   margin: 0;
 }
 
+pre {
+  margin: 0;
+}
+
 #sapper {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  margin: 0;
 }
